--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/styled": "^11.13.0",
     "@mui/material": "^5.13.6",
     "i18next-http-backend": "^2.2.1",
     "react": "^18.2.0",
